// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhookRouterForm should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="call_webhook"
  tabs={
    Array [
      Object {
        "body": <React.Fragment>
          <p
            className="info"
          >
            Add any additional headers below that you would like to send along with your request.
          </p>
          <FlipMovePropConverter
            delay={0}
            disableAllAnimations={false}
            duration={100}
            easing="ease-out"
            enterAnimation="elevator"
            getPosition={[Function]}
            leaveAnimation="elevator"
            maintainContainerHeight={false}
            staggerDelayBy={0}
            staggerDurationBy={0}
            typeName="div"
            verticalAlignment="top"
          >
            <div>
              <HeaderElement
                entry={
                  Object {
                    "value": Object {
                      "name": "Content-Type",
                      "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
                      "value": "application/json",
                    },
                  }
                }
                index={0}
                onChange={[Function]}
                onRemove={[Function]}
              />
            </div>
            <div>
              <HeaderElement
                entry={
                  Object {
                    "value": Object {
                      "name": "",
                      "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
                      "value": "",
                    },
                  }
                }
                index={1}
                onChange={[Function]}
                onRemove={[Function]}
              />
            </div>
          </FlipMovePropConverter>
        </React.Fragment>,
        "checked": true,
        "hasErrors": false,
        "name": "HTTP Headers",
      },
    ]
  }
  title="Call Webhook"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "aliases": Array [
          "split_by_webhook",
        ],
        "component": [Function],
        "description": "Call a webhook",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Call Webhook",
        "type": "call_webhook",
        "visibility": Array [
          "message",
          "voice",
        ],
      }
    }
    onChange={[MockFunction]}
  />
  <div
    className="method"
  >
    <SelectElement
      entry={
        Object {
          "value": Object {
            "label": "GET",
            "value": "GET",
          },
        }
      }
      name="MethodMap"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "GET",
            "value": "GET",
          },
          Object {
            "label": "POST",
            "value": "POST",
          },
          Object {
            "label": "PUT",
            "value": "PUT",
          },
        ]
      }
      styles={
        Object {
          "control": [Function],
          "input": [Function],
          "multiValue": [Function],
          "placeholder": [Function],
          "singleValue": [Function],
        }
      }
    />
  </div>
  <div
    className="url"
  >
    <Connect(TextInputElement)
      autocomplete={true}
      entry={
        Object {
          "value": "",
        }
      }
      name="URL"
      onChange={[Function]}
      onFieldFailures={[Function]}
      placeholder="Enter a URL"
    />
  </div>
  <div
    className="instructions"
  >
    <p>
      If your server responds with JSON, each property will be added to the Flow.
    </p>
    <pre
      className="code"
    >
      { "product": "Solar Charging Kit", "stock level": 32 }
    </pre>
    <p>
      This response would add 
      <span
        className="example"
      >
        @webhook.product
      </span>
       and
       
      <span
        className="example"
      >
        @webhook["stock level"]
      </span>
       for use in the flow.
    </p>
  </div>
  <OptionalTextInput
    helpText="By naming the result, you can reference it later using @results.result"
    maxLength={64}
    name="Result Name"
    onChange={[Function]}
    toggleText="Save as.."
    value={
      Object {
        "value": "Result",
      }
    }
  />
</Dialog>
`;

exports[`WebhookRouterForm updates should repopulate post body 1`] = `
Object {
  "headers": Array [
    Object {
      "value": Object {
        "name": "Content-Type",
        "uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
        "value": "application/json",
      },
    },
    Object {
      "value": Object {
        "name": "",
        "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
        "value": "",
      },
    },
  ],
  "method": Object {
    "value": Object {
      "value": "GET",
    },
  },
  "postBody": Object {
    "value": null,
  },
  "resultName": Object {
    "value": "Result",
  },
  "url": Object {
    "validationFailures": Array [],
    "value": "http://domain.com/",
  },
  "valid": true,
}
`;

exports[`WebhookRouterForm updates should repopulate post body 2`] = `
Object {
  "headers": Array [
    Object {
      "value": Object {
        "name": "Content-Type",
        "uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
        "value": "application/json",
      },
    },
    Object {
      "value": Object {
        "name": "",
        "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
        "value": "",
      },
    },
  ],
  "method": Object {
    "value": "POST",
  },
  "postBody": Object {
    "value": "@(json(object(
  \\"contact\\", object(
    \\"uuid\\", contact.uuid, 
    \\"name\\", contact.name, 
    \\"urn\\", contact.urn
  ),
  \\"flow\\", object(
    \\"uuid\\", run.flow.uuid, 
    \\"name\\", run.flow.name
  ),
  \\"results\\", foreach_value(results, extract_object, \\"value\\", \\"category\\")
)))",
  },
  "resultName": Object {
    "value": "Result",
  },
  "url": Object {
    "validationFailures": Array [],
    "value": "http://domain.com/",
  },
  "valid": true,
}
`;

exports[`WebhookRouterForm updates should save changes: after header removed 1`] = `
Object {
  "headers": Array [
    Object {
      "value": Object {
        "name": "Content-Type",
        "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
        "value": "application/json",
      },
    },
    Object {
      "value": Object {
        "name": "",
        "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
        "value": "",
      },
    },
  ],
  "method": Object {
    "value": Object {
      "value": "POST",
    },
  },
  "postBody": Object {
    "value": "Post Body",
  },
  "resultName": Object {
    "value": "Result",
  },
  "url": Object {
    "persistantFailures": Array [],
    "value": "",
  },
  "valid": true,
}
`;

exports[`WebhookRouterForm updates should save changes: intitial state 1`] = `
Object {
  "headers": Array [
    Object {
      "value": Object {
        "name": "Content-Type",
        "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
        "value": "application/json",
      },
    },
    Object {
      "value": Object {
        "name": "",
        "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
        "value": "",
      },
    },
    Object {
      "validationFailures": undefined,
      "value": Object {
        "name": "Content-type",
        "uuid": "e0bc3776-792f-49d2-b4be-48be2cf8159a",
        "value": "application/json",
      },
    },
  ],
  "method": Object {
    "value": Object {
      "value": "POST",
    },
  },
  "postBody": Object {
    "value": "Post Body",
  },
  "resultName": Object {
    "value": "Result",
  },
  "url": Object {
    "persistantFailures": Array [],
    "value": "",
  },
  "valid": true,
}
`;

exports[`WebhookRouterForm updates should save changes: save all the things 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "body": "Post Body",
          "headers": Object {
            "Content-Type": "application/json",
          },
          "method": "POST",
          "result_name": "Result",
          "type": "call_webhook",
          "url": "http://domain.com/",
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        },
        Object {
          "destination_uuid": null,
          "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "Success",
            ],
            "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "type": "has_only_text",
            "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
            "name": "Success",
            "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
          },
          Object {
            "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "name": "Failure",
            "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
          },
        ],
        "default_category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        "operand": "@results.result.category",
        "type": "switch",
      },
      "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_webhook",
    },
  },
]
`;
